--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,20 +8,23 @@
 getwd()
 unzip("activity.zip")
 
-# read the data into data frame dataFrame
-dataFrame <- read.csv("activity.csv")
+# read the data into data frame df
+df <- read.csv("activity.csv")
 ```
 
 ## What is mean total number of steps taken per day?
 
 ```{r}
 # calculate  total number of steps per each day
-steps_daily <- aggregate(steps~date, data=dataFrame, FUN =sum)
+df$date <- as.Date(df$date)
+steps_daily <- aggregate(steps~date, data=df, FUN =sum)
 ```
-```{r fig.width=5, fig.height=5}
+```{r fig.width=9, fig.height=9}
 # histogram of the total number of steps per each day
-hist(steps_daily$steps, breaks=nrow(steps_daily), main="Total Number of Steps Per Day",
-     xlab="Steps Per Day", col="blue")
+steps_daily$date <- as.numeric(steps_daily$date)
+xname = " Steps Per Day"
+hist(steps_daily$steps, breaks=nrow(steps_daily), main=paste("Total Number of", xname),     
+     xlab=xname, col="lightblue", border = "pink")
 ```
 ```{r}
 # Calculate the mean and median total number of steps taken per day
@@ -35,12 +38,13 @@ The median total number of steps taken per day is `r format(median.steps_daily, 
 
 ```{r}
 # find the average number of steps per 5 minute interval steps
-avg_interval <- aggregate(steps~interval, data=dataFrame, FUN=mean)
+avg_interval <- aggregate(steps~interval, data=df, FUN=mean)
 ```
-```{r fig.width=5, fig.height=5}
+```{r fig.width=9, fig.height=9}
 # plot of the 5-min.interval and avg. steps taken over all days
-plot(avg_interval, type="l", main="Average Daily Activity",
-     xlab="5-minute Intervals taken each day", ylab="Average Steps Taken Over All Days")
+plot(x=avg_interval$interval, y=avg_interval$steps,type="l", main="Average Daily Activity",
+     xlab="The time point measured each day(5-minute interval) ", ylab="Average Steps Taken", col="blue")
+
 ```
 ```{r}
 # find the 5-minute interval, on avg. steps over all days in   
@@ -53,7 +57,7 @@ The 5-minute interval, on average across all the days in the dataset, that conta
 ## Imputing missing values
 ```{r}
 ## calculate the number of missing values in the dataset 
-num_missing <- sum(is.na(dataFrame))
+num_missing <- sum(is.na(df))
 ```
 The total number of missing values in the dataset is `r num_missing`.  
 
@@ -65,8 +69,8 @@ The missing values will be imputed by replacing step NAs with the mean of the 5-
 # (imputed with mean of the 5-minute interval)
 
 new_steps <- numeric()
-for(i in 1:nrow(dataFrame)) {
-    temp <- dataFrame[i,]
+for(i in 1:nrow(df)) {
+    temp <- df[i,]
     if (is.na(temp$steps)) {
         steps <- subset(avg_interval,interval==temp$interval)$steps
     } else {
@@ -76,17 +80,17 @@ for(i in 1:nrow(dataFrame)) {
 }
 
 ## create a new dataset  with imputed steps for the missing steps.
-new_dataFrame <- dataFrame
-new_dataFrame$steps <- new_steps
+new_df <- df
+new_df$steps <- new_steps
 
 # calculate the total number of steps per each day
-new_steps_daily <- aggregate(steps~date, data=new_dataFrame, FUN=sum)
+new_steps_daily <- aggregate(steps~date, data=new_df, FUN=sum)
 ```
-```{r fig.width=7, fig.height=7}
+```{r fig.width=9, fig.height=9}
 # histogram of the total number of steps taken each day
 hist(new_steps_daily$steps, breaks=nrow(new_steps_daily), 
      main="Total Number of Steps Per Day With Imputed Values",
-     xlab="Steps Per Day", col="green")
+     xlab="Steps Per Day", col="lightblue", border="pink")
 ```
 ```{r}
 # Find the mean and median total number of steps taken per day
@@ -104,23 +108,23 @@ The impact of the imputation was a little increase in the median total number of
 ```{r}
 ## change date column from factor to Date
 
-new_dataFrame$date <- as.Date(new_dataFrame$date)
+new_df$date <- as.Date(new_df$date)
 
 ## Create a new variable with two levels "weekday" and "weekend" 
 ## to indicate if date is a weekday or weekend day.
 
 weekend_days <- c("Saturday","Sunday")
-new_dataFrame$day_type <- as.factor(sapply(new_dataFrame$date, 
+new_df$day_type <- as.factor(sapply(new_df$date, 
                                     function(x) ifelse(weekdays(x) %in% weekend_days,"weekend","weekday")))
 ```
-```{r fig.width=7, fig.height=7}
+```{r fig.width=9, fig.height=9}
 ## Make a panel plot containing a time series plot (i.e. type = "l") 
 ## of the 5-minute interval (x-axis) and the average number of steps taken, 
 ## averaged across all weekday days or weekend days (y-axis).
 
 
 require(plyr)
-avg_steps <- ddply(new_dataFrame, .(interval, day_type), summarize, steps = mean(steps))
+avg_steps <- ddply(new_df, .(interval, day_type), summarize, steps = mean(steps))
 
 require(lattice)
 xyplot(steps ~ interval | day_type, data = avg_steps, layout = c(1, 2), type = "l", 
